<resources>
    <string name="app_name">TestMobileVision</string>
    <string name="please_wait">Please wait...</string>
    <string name="processor_mode">use multi processor</string>
    <string name="processor_mode_multi">Multi</string>
    <string name="processor_mode_focus">Focus</string>
    <string name="classification">Classification</string>
    <string name="all_classification">All</string>
    <string name="no_classification">No</string>
    <string name="landmark">Landmark</string>
    <string name="all_landmark">All</string>
    <string name="no_landmark">No</string>
    <string name="detect_mode">Detect mode</string>
    <string name="detect_mode_fast">Fast</string>
    <string name="detect_mode_accurate">Accurate</string>
    <string name="prominent_face_only">Prominent face only</string>
    <string name="face_tracking">Face tracking</string>
    <string name="face_tracking_on">ON</string>
    <string name="face_tracking_off">OFF</string>
    <string name="frame_rotation">Rotation</string>
    <string-array name="frame_rotation_array">
        <item>" "</item>
        <item>0°</item>
        <item>90°</item>
        <item>180°</item>
        <item>270°</item>
    </string-array>
    <string name="auto_focus">Auto focus</string>
    <string name="use_front_camera">Use front camera</string>
    <string name="detect_fps">detect per second</string>
    <string name="default_detect_fps">30</string>
    <string name="taken_picture">taken picture and save it at\n\"%s\".</string>
    <string name="barcode_format">Barcode format</string>
    <string-array name="barcode_format_array">
        <item>ALL_FORMATS</item>
        <item>AZTEC</item>
        <item>CODABAR</item>
        <item>CODE_39</item>
        <item>CODE_93</item>
        <item>CODE_128</item>
        <item>DATA_MATRIX</item>
        <item>EAN_8</item>
        <item>EAN_13</item>
        <item>ITF</item>
        <item>PDF417</item>
        <item>QR_CODE</item>
        <item>UPC_A</item>
        <item>UPC_E</item>
    </string-array>
</resources>
