<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.eq_inc.testmobilevision.FaceDetectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:weightSum="1.0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/scAutoFocus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_focus"/>
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/scFacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_front_camera"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1.0"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detect_fps"/>
                <EditText
                    android:id="@+id/etDetectFps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@string/default_detect_fps"
                    android:layout_weight="1.0"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/flCameraPreviewContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.65">
            <jp.eq_inc.testmobilevision.view.GraphicOverlay
                android:id="@+id/goPreviewOverlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="#11111111"/>
            <SurfaceView
                android:id="@+id/svCameraPreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35">
            <TextView
                android:id="@+id/tvFaceInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
